# HPO-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/.rules/: git-rule.md
.claude/rules/Skills/impl-design/: SKILL.md
.claude/rules/Skills/test-design/: SKILL.md
.claude/rules/skills/doc-code-consistency/: SKILL.md
.github/workflows/: ci.yml
doc/: impl_design.md  llm_prompt_design.md  model_adapter_design.md  requirements.md  test_design.md
example/: s5e4_lgbm.py  simple_pytorch.py  sklearn_rf_example.py  titanic_lgbm.py
example/output/: lgb_hpo_report.md  pytorch_hpo_report.md  s5e4_hpo_report.md  sklearn_rf_hpo_report.md
src/hpo_agent/: __init__.py  adapters.py  agent.py  models.py  prompts.py  providers.py  report.py  state.py  supervisor.py  tools.py
test/: conftest.py  test_agent.py  test_components.py  test_hpo_properties.py
