[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hpo_agent"]

[project]
name = "hpo-agent"
version = "0.1.0"
description = "AI agent for hyperparameter optimization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.2",
    "langgraph>=0.1",
    "langchain-google-genai>=1.0",
    "optuna>=3.6",
    "scipy>=1.13",
    "lightgbm>=4.3",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "langchain-openai>=1.1.11",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.2",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.0",
    "ruff>=0.4.0",
    "torch>=2.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"


[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "component: 各クラス・メソッドの実装正確性テスト",
    "agent: スーパーバイザーとツール群の連携・制御フローテスト",
    "hpo: HPO として期待される最適化性質のテスト",
]
